# domstolaleit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/hooks/: session-start.sh
app/: config.py  lawyers.py  main.py  search.py
app/api/: lawyer_routes.py  routes.py  schemas.py
app/models/: court_case.py
app/scrapers/: aggregator.py  base.py  haestirettur.py  heradsdomstolar.py  landsrettur.py
app/utils/: icelandic.py
docs/: index.html
docs/css/: style.css
docs/logmenn/1/: index.html
docs/logmenn/10/: index.html
docs/logmenn/100/: index.html
docs/logmenn/1000/: index.html
docs/logmenn/1001/: index.html
docs/logmenn/1002/: index.html
docs/logmenn/1003/: index.html
docs/logmenn/1004/: index.html
docs/logmenn/1005/: index.html
docs/logmenn/1006/: index.html
docs/logmenn/1007/: index.html
docs/logmenn/1008/: index.html
docs/logmenn/1009/: index.html
docs/logmenn/101/: index.html
docs/logmenn/1010/: index.html
docs/logmenn/1011/: index.html
docs/logmenn/1012/: index.html
docs/logmenn/1013/: index.html
docs/logmenn/1014/: index.html
scripts/: build_appeal_chains.py  build_index.py  build_static.py  convert_pdfs.py  download_all.py  download_pdfs.py  extract_lawyers.py  fetch_verdict_urls.py  import_bar_data.py  rename_to_chronological.py  scrape_active_lawyers.py
static/css/: style.css
templates/: base.html  index.html  logmadur.html  logmenn.html  verdict.html
templates/partials/: lawyer_results.html  local_results.html  not_found.html  results.html
tests/: conftest.py  test_extract_lawyers.py  test_search.py
(+1770 files in other folders)
